fixed all tests for cottontail, except ignored, adjusted materialized view locking to prevent deadlocks (eager)